--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,13 @@
             <artifactId>jsf-impl</artifactId>
             <version>2.2.12</version>
         </dependency>
+<dependency>
+    <groupId>javax.enterprise</groupId>
+    <artifactId>cdi-api</artifactId>
+    <version>2.0</version>
+    <scope>provided</scope>
+</dependency>
+        
 	</dependencies>
 	<properties>
 		<maven.compiler.source>1.8</maven.compiler.source>
