--- a/pom.xml
+++ b/pom.xml
@@ -61,7 +61,27 @@
 			<artifactId>cdi-api</artifactId>
 			<version>2.0</version>
 			<scope>provided</scope>
-		</dependency>
+		</dependency>	
+		 <dependency>
+        <groupId>org.primefaces</groupId>
+        <artifactId>primefaces</artifactId>
+        <version>6.0</version>
+    </dependency>
+    <dependency>
+    <groupId>org.ocpsoft.rewrite</groupId>
+    <artifactId>rewrite-servlet</artifactId>
+    <version>3.4.4.Final</version>
+</dependency>
+<dependency>
+    <groupId>org.ocpsoft.rewrite</groupId>
+    <artifactId>rewrite-config-prettyfaces</artifactId>
+    <version>3.4.4.Final</version>
+</dependency>
+    <dependency>
+        <groupId>com.ocpsoft</groupId>
+        <artifactId>prettyfaces-jsf2</artifactId>
+        <version>3.3.3</version>
+</dependency>
 	</dependencies>
 	<properties>
 		<maven.compiler.source>1.8</maven.compiler.source>
