--- a/pom.xml
+++ b/pom.xml
@@ -82,6 +82,12 @@
         <artifactId>prettyfaces-jsf2</artifactId>
         <version>3.3.3</version>
 </dependency>
+  <dependency>
+    <groupId>javax</groupId>
+    <artifactId>javaee-web-api</artifactId>
+    <version>6.0</version>
+    <scope>provided</scope>
+  </dependency>
 	</dependencies>
 	<properties>
 		<maven.compiler.source>1.8</maven.compiler.source>
